--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
         <h2>dcompressor</h2>
         <form id="uploadForm">
             <input type="text" id="username" placeholder="pseudo" required>
+            <input type="text" id="videoTitle" placeholder="titre" required>
 
             <div class="file-upload-wrapper">
                 <input type="file" id="videoFile" accept="video/*" required>
